-fixing h2 span font weight

--- a/project1/index.html
+++ b/project1/index.html
@@ -30,7 +30,8 @@
     </nav>
     <header class="splash">
         <div class="splash-inner">
-            <h1 class="page-title">hellow,<br> we are
+            <h1 class="page-title">hellow,
+                <br> we are
                 <span>creatively</span>
             </h1>
             <h2 class="page-subtitle">we build brands and products to bring big ideas into life</h2>
