-fixing style hierarchy of section services

--- a/project1/index.html
+++ b/project1/index.html
@@ -38,20 +38,24 @@
             <a href="#" class="btn btn-one">see our work</a>
         </div>
     </header>
-    <section class="container">
-        <div class="row">
-            <div class="box">
-                <h3>design</h3>
-                <div class="box-number">1</div>
-            </div>
-            <div class="box">
+    <section class="services">
+        <div class="container">
+            <div class="row">
+                <div class="skill-decription">
+                    <p>
+                    <h3>design</h3>
+                    <h4>1</h4>
+                    </p>
+                </div>
+                <p>
                 <h3>code</h3>
-            </div>
-            <div class="box">
+                </p>
+                <p>
                 <h3>marketing</h3>
+                </p>
+
             </div>
         </div>
-
     </section>
 </body>
 
