--- a/project1/index.html
+++ b/project1/index.html
@@ -40,22 +40,57 @@
     </header>
     <section class="services">
         <div class="container">
-            <div class="row">
-                <div class="skill-decription">
-                    <p>
+            <div class="row center">
+                <h2>our services</h2>
+                <div class="box">
+                    <div class="box-number">1</div>
                     <h3>design</h3>
-                    <h4>1</h4>
-                    </p>
+                    <p>Curabitur ornare.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam.</p>
+                    <a href="#" class="btn btn-two">read more</a>
                 </div>
-                <p>
-                <h3>code</h3>
-                </p>
-                <p>
-                <h3>marketing</h3>
-                </p>
+                <div class="box">
+                    <div class="box-number">2</div>
+                    <h3>code</h3>
+                    <p>Cras vel commodo</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam.</p>
+                    <a href="#" class="btn btn-three">read more</a>
+                </div>
+                <div class="box">
+                    <div class="box-number">3</div>
+                    <h3>marketing</h3>
+                    <p>Donec fringilla</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam.</p>
+                    <a href="#" class="btn btn-four">read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="our-work">
+        <div class="container">
+            <h2>our work</h2>
+            <div class="row center">
+                <div class="box">
+                    1</div>
+                <div class="box">
+                    2</div>
+                <div class="box">
+                    3</div>
+                <div class="box">
+                    4</div>
 
             </div>
         </div>
+
     </section>
 </body>
 
