-finished our-work section -started sections contact

--- a/project1/index.html
+++ b/project1/index.html
@@ -80,17 +80,82 @@
             <h2>our work</h2>
             <div class="row center">
                 <div class="box">
-                    1</div>
+                    <div class="skill-image">
+                        <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
+                    </div>
+                    <div class="our-work-description">
+                        <h3>vertigo</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip
+                        </p>
+                        <a href="#" class="btn btn-five">read more</a>
+                    </div>
+                </div>
                 <div class="box">
-                    2</div>
+
+                    <div class="skill-image">
+                        <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
+                    </div>
+                    <div class="our-work-description">
+                        <h3>eloquence</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip
+                        </p>
+                        <a href="#" class="btn btn-five">read more</a>
+                    </div>
+                </div>
                 <div class="box">
-                    3</div>
+                    <div class="skill-image">
+                        <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
+                    </div>
+                    <div class="our-work-description">
+                        <h3>lithe</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip
+                        </p>
+                        <a href="#" class="btn btn-five">read more</a>
+                    </div>
+                </div>
                 <div class="box">
-                    4</div>
+                    <div class="skill-image">
+                        <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
+                    </div>
+                    <div class="our-work-description">
+                        <h3>serendipity</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip
+                        </p>
+                        <a href="#" class="btn btn-five">read more</a>
+                    </div>
+                </div>
 
             </div>
         </div>
-
+    </section>
+    <section class="contact-us">
+        <div class="container">
+            <h2>contact us</h2>
+            <div class="row center">
+                <form>
+                    form
+                </form>
+                <div class="box">
+                    box
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
