--- a/project1/index.html
+++ b/project1/index.html
@@ -149,10 +149,21 @@
             <h2>contact us</h2>
             <div class="row center">
                 <form>
-                    form
+                    <h4>Your name</h4>
                 </form>
                 <div class="box">
-                    box
+                    <div class="contact-details">
+                        <h4 class="position">sales specialist</h4>
+                        <h4 >Elinor Kinder</h4>
+                    </div>
+                    <div class="contact-details">
+                        <h4 class="position">address</h4>
+                        <h4 >299 Browning Lane<br> Cortland<br>13045 New York</h4>
+                    </div>
+                    <div class="contact-details">
+                        <h4 class="position">phone</h4>
+                        <h4 >607-835-7016</h4>
+                    </div>
                 </div>
             </div>
         </div>
