--- a/project1/index.html
+++ b/project1/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <title>My first website</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Signika:wght@700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <nav class="navigation">
         <div class="container">
@@ -79,7 +77,7 @@
         <div class="container">
             <h2>our work</h2>
             <div class="row center">
-                <div class="box">
+                <div class="box-our-work">
                     <div class="skill-image">
                         <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
                     </div>
@@ -94,8 +92,7 @@
                         <a href="#" class="btn btn-five">read more</a>
                     </div>
                 </div>
-                <div class="box">
-
+                <div class="box-our-work">
                     <div class="skill-image">
                         <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
                     </div>
@@ -110,7 +107,7 @@
                         <a href="#" class="btn btn-five">read more</a>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box-our-work">
                     <div class="skill-image">
                         <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
                     </div>
@@ -125,7 +122,7 @@
                         <a href="#" class="btn btn-five">read more</a>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box-our-work">
                     <div class="skill-image">
                         <img src="https://i.postimg.cc/8P3b9G9r/pexels-c-line-13865998.jpg" alt="image">
                     </div>
@@ -140,7 +137,6 @@
                         <a href="#" class="btn btn-five">read more</a>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -149,25 +145,38 @@
             <h2>contact us</h2>
             <div class="row center">
                 <form>
-                    <h4>Your name</h4>
+                    <p><input type="text" placeholder="Your name"></p>
+                    <p><input type="text" placeholder="Your e-mail"></p>
+                    <p><input type="text" placeholder="Your Subject"></p>
+                    <p><input class="message-placeholder" type="text" placeholder="Type your message here"></p>
                 </form>
                 <div class="box">
-                    <div class="contact-details">
-                        <h4 class="position">sales specialist</h4>
-                        <h4 >Elinor Kinder</h4>
-                    </div>
-                    <div class="contact-details">
-                        <h4 class="position">address</h4>
-                        <h4 >299 Browning Lane<br> Cortland<br>13045 New York</h4>
-                    </div>
-                    <div class="contact-details">
-                        <h4 class="position">phone</h4>
-                        <h4 >607-835-7016</h4>
-                    </div>
+                    <address>
+                        <div class="contact-details">
+                            <p class="position">sales specialist</p>
+                            <p>Elinor Kinder</p>
+                        </div>
+                        <div class="contact-details">
+                            <p class="position">address</p>
+                            <p>299 Browning Lane<br> Cortland<br>13045 New York</p>
+                        </div>
+                        <div class="contact-details">
+                            <p class="position">phone</p>
+                            <p>607-835-7016</p>
+                        </div>
+                    </address>
+
                 </div>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="social-media">
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
-
 </html>
