-corrections for pre project -finished project1

--- a/project1/index.html
+++ b/project1/index.html
@@ -29,7 +29,7 @@
     </nav>
     <header class="splash">
         <div class="splash-inner">
-            <h1 class="page-title">hellow,
+            <h1>hellow,
                 <br> we are
                 <span>creatively</span>
             </h1>
