--- a/project1/index.html
+++ b/project1/index.html
@@ -146,10 +146,10 @@
             <h2>contact us</h2>
             <div class="row center">
                 <form>
-                    <p><input type="text" placeholder="Your name"></p>
-                    <p><input type="text" placeholder="Your e-mail"></p>
-                    <p><input type="text" placeholder="Your Subject"></p>
-                    <p><input class="message-placeholder" type="text" placeholder="Type your message here"></p>
+                    <input type="text" placeholder="Your name">
+                    <input type="text" placeholder="Your e-mail">
+                    <input type="text" placeholder="Your Subject">
+                    <textarea placeholder="Type your message here" rows="20"></textarea>
                 </form>
                 <div class="box">
                     <address>
